# python-debug-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
demo/: app.py
scripts/: demo-record.js  package-lock.json  package.json  youtube-description.md
src/debug_agent/: __init__.py  chat_session.py  config.py  context_compressor.py  engine.py  llm_client.py  middleware.py  system_prompt_builder.py  tool_registry.py
src/debug_agent/inspectors/: __init__.py  async_tasks.py  build_info_inspector.py  cache_inspector.py  celery.py  config_inspector.py  cpu_profile_inspector.py  database.py  django.py  endpoint_test_inspector.py  error_tracking.py  fastapi_ext.py  fd_inspector.py  feature_flag_inspector.py  flask_ext.py  framework.py  health_inspector.py  http_client_inspector.py  http_tracker.py  jinja2.py  leak_detector_inspector.py  locks_inspector.py  logging_inspector.py  memory.py  metrics_inspector.py  migration_inspector.py  modules.py  pool_inspector.py  redis.py  runtime.py  scheduler_inspector.py  security_inspector.py  service_registry_inspector.py  signals.py  snapshot_inspector.py  system.py  threads.py  warnings_inspector.py  websocket_inspector.py
src/debug_agent/web/: chat_page.py
