[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-agent"
version = "0.1.0"
description = "AI-powered runtime debugging agent for Python web applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
flask = ["flask>=2.3"]
django = ["django>=4.2"]
dev = ["fastapi", "uvicorn", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]
